# django-pageviews

./: ASYNC_USAGE.md  LICENSE.md  MANIFEST.in  README.md  USAGE.md  pyproject.toml
django_pageviews/: __init__.py  admin.py  apps.py  middleware.py  mixins.py  models.py  settings.py  tasks.py
django_pageviews/management/: __init__.py
django_pageviews/management/commands/: clean_pageviews.py
django_pageviews/migrations/: 0001_initial.py  __init__.py
django_pageviews/templatetags/: __init__.py  pageview_tags.py
